--- a/docker/speedtest/Dockerfile
+++ b/docker/speedtest/Dockerfile
@@ -1,9 +1,7 @@
 FROM debian:10-slim AS get-speedtest
 
-RUN apt-get update && apt-get install gnupg1 apt-transport-https dirmngr lsb-release -y
-RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 379CE192D401AB61
-RUN echo "deb https://ookla.bintray.com/debian $(lsb_release -sc) main" | tee  /etc/apt/sources.list.d/speedtest.list
-RUN apt-get update
+RUN apt-get update && apt-get install curl -y
+RUN curl -s https://install.speedtest.net/app/cli/install.deb.sh | bash
 RUN apt-get install speedtest
 
 FROM alpine as install-dependencies
@@ -13,7 +11,7 @@ COPY . .
 RUN npm ci
 
 FROM alpine as prod-stage
-RUN apk add --no-cache nodejs
+RUN apk add --no-cache nodejs mtr
 LABEL maintainer="Jonas Friedmann <j@frd.mn>"
 
 WORKDIR /usr/src/app
