--- a/docker/speedtest/package.json
+++ b/docker/speedtest/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "delay": "^4.3.0",
     "execa": "^4.0.0",
-    "influx": "^5.5.1"
+    "influx": "^5.5.1",
+    "util": "^0.12.4"
   }
 }
