--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8086:8086"
     volumes:
       - "./data/influxdb/:/var/lib/influxdb"
+      - "./../influx-backup:/data-backup"
     environment:
       - "INFLUXDB_ADMIN_USER=admin"
       - "INFLUXDB_ADMIN_PASSWORD=password"
