Fixed speedtest installation url

--- a/docker/speedtest/Dockerfile
+++ b/docker/speedtest/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:10-slim AS get-speedtest
 
 RUN apt-get update && apt-get install curl -y
-RUN curl -s https://install.speedtest.net/app/cli/install.deb.sh | bash
+RUN curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash
 RUN apt-get install speedtest
 
 FROM alpine as install-dependencies
